# vim-easycomplete

./: .gitignore  0  Cargo.toml  LICENSE  README-cn.md  README-en.md  README.md  add-custom-plugin.md  beautify-menu-items.md  build.sh  custom-config.md  my-custom-config.md
.github/workflows/: ci.yml
UltiSnips/: d.snippets
autoload/: '  easycomplete.vim  easycomplete.vim.bak  language_alias.vim  log.vim  plugin.vim  ui.vim
autoload/easycomplete/: cmdline.vim  colorful.vim  confirm.vim  input.vim  installer.vim  job.vim  lang.vim  log.vim  lsp.vim  lua.vim  plugin.vim  popup.vim  popup.vim.bak  pum.vim  python.vim  sign.vim  signature.vim  tabnine.vim  ui.vim  util.vim
autoload/language/: go.vim
dict/: cmake.txt  css.txt  html.txt  ts.txt  vim.txt
doc/: easycomplete.txt  tags
lua/: easycomplete.lua  easycomplete_lsp_autoload.lua  easycomplete_util.lua  init.lua
lua/easycomplete/: autocmd.lua  autoload.lua  autopair.lua  cmdline.lua  ghost_text.lua  loading.lua  luasnip.lua  pum.lua  tabnine.lua  util.lua  util.rs
plugin/: easycomplete.vim
pythonx/: vimsnippets.py
rust/: util.rs
samples/: _tern-project
snippets/: _.snippets  c.snippets  cpp.snippets  crystal.snippets  cs.snippets  css.snippets  dart.snippets  elixir.snippets  erlang.snippets  eruby.snippets  go.snippets  html.snippets  java.snippets  jsp.snippets  lfe.snippets  make.snippets  markdown.snippets  objc.snippets  php.snippets  python.snippets  r.snippets  rails.snippets  rst.snippets  ruby.snippets  rust.snippets  typescript  vhdl.snippets  vim.snippets
(+92 files in other folders)
